# project-templates

./: .mise.toml
nextjs/: .dockerignore  .editorconfig  .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  .tool-versions  Dockerfile  Makefile  README.md  components.json  docker-compose.yml  eslint.config.mjs  eslint.d.ts  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vitest.config.mts  vitest.config.ts
nextjs/.github/workflows/: ci.yml
nextjs/public/: favicon-placeholder.txt  mockServiceWorker.js  robots.txt
nextjs/src/__tests__/: setup.ts
nextjs/src/app/: actions.ts  error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
nextjs/src/app/api/health/: route.ts
nextjs/src/components/: ContactForm.tsx  FeatureCard.tsx  InteractiveCounter.tsx
nextjs/src/components/ui/: button.tsx  card.tsx  form.tsx  input.tsx  separator.tsx  textarea.tsx
python/: .mise.toml  .pre-commit-config.yaml  pyproject.toml
python/.github/workflows/: ci.yml
terraform/: .mise.toml  .pre-commit-config.yaml  .tflint.hcl  .trivyconfig.yaml  .trivyignore
terraform/.github/workflows/: terraform-checks.yml
